fixed mobile win screen disalignment?

--- a/styles/main.css
+++ b/styles/main.css
@@ -318,6 +318,7 @@ html {
     left: 0;
     height: 100vh;
     content: '';
+    box-sizing: border-box;
 
     background-color: #122E40;
     border-left: 6px solid #245C80;
